test/typechecker/fail/redecl_enum_option.fu
enum Foo[T] { A(T), B }
enum Bar : Foo[i64] { A(i64) }
